# accounting-tool

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: rust.yml
compose/: docker-compose-mac.yml
entity/: Cargo.toml
entity/src/: lib.rs  prelude.rs  transaction.rs  transaction_type.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20231206_000001_create_txn_type.rs  m20231206_105605_create_txn.rs  m20231206_111026_seed_txn_type.rs
src/: errors.rs  main.rs  web.rs
src/models/: requests.rs  responses.rs
src/web/: routes_txn.rs  routes_txn_types.rs
