[package]
name = "accounting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { verions = "1", features = ["full"] }
axum = "0.7.1"
dotenv = "0.15.0"
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
log = "0.4"

[dev-dependencies]
anyhow = "1"
