[package]
name = "accounting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { verions = "1", features = ["full"] }
axum = "0.7.1"
dotenv = "0.15.0"
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
serde = "1.0.193"
serde_json = "1.0.108"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
log = "0.4"
migration = { path = "migration" }
entity = { path = "entity" }

[dev-dependencies]
anyhow = "1"
